--- a/src/pages/about/about.pug
+++ b/src/pages/about/about.pug
@@ -1,10 +1,11 @@
 extends Templates/page
 
-block head 
+block append config 
+    - current_page = 'About'
+
+block append head 
     link(rel="stylesheet", href=require("./about.scss"))
     script(src=require("./about.js") defer) 
-    //- #{site_name} is taking from Templates/page --> include Includes/config
-    title #{site_name} | About 
 
 block body 
     h1 About
