--- a/src/templates/page.pug
+++ b/src/templates/page.pug
@@ -8,7 +8,7 @@ html(lang="en")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         script(src="http://localhost:35729/livereload.js" defer)   
         block head
-            title= site_name + ' | ' + current_page
+            title= (current_page) ? site_name + ' | ' + current_page : site_name
 
     body 
         block body
